# ForestryLLM

./: .gitignore  PLAN.md  README.md  app.py  pyproject.toml  requirements.txt  知识库项目规则.md
Forestry_KB/: 01_excel_to_jsonl_csv.py  02_add_jsonl_to_qdrant.py
Forestry_KB/chunking_datas/: B001_M_林木病理学_切块工作版.xlsx  B002_M_园林植物遗传育种_切块工作版.xlsx  B003_M_园林树木学_切块工作版.xlsx  B004_M_园林树木栽培学_切块工作版.xlsx
Forestry_KB/qdrant_data/: meta.json
Forestry_RAG/data/: Forestry_KB_merged_total.jsonl
Forestry_RAG/scripts/: build_vector_db.py  rag_qa_local_qwen.py  (+1 more)
configs/: project_config.json  project_config.v0.2.template.json
docs/: HOW_TO_BUILD_FORMAL_QA.md  PROJECT_GUIDE_FOR_BEGINNERS.md  v02_knowledge_base_expansion.md
evaluation/: README.md  formal_qa_B001_LMBLX_draft_v0.1.jsonl  formal_qa_B002_YLZWYCYZ_draft_v0.1.jsonl  formal_qa_B002_YLZWYCYZ_reviewed_v0.1.jsonl  formal_qa_draft_v0.1.jsonl  qa_review_template.csv  smoke_qa.jsonl
experiments/: README.md  formal_qa_B001_LMBLX_reviewed_v0.1_evaluation.json  formal_qa_B002_YLZWYCYZ_reviewed_v0.1_evaluation.json  formal_qa_draft_v0.1_smoke_evaluation.json  latest_evaluation.json  validation_B001_B004_expanded_corpus.json  validation_latest.json
forestryllm/: __init__.py  book_ingestion.py  cli.py  config.py  corpus.py  evaluation.py  index.py  paper.py  rag.py  retrieval.py
paper/: manuscript.md
references/: README.md
research/: README.md  audit_queue.csv  blindspots.md  data_governance.md  decisions.md  log.md
tests/: test_corpus_and_retrieval.py
tool/: build_qdrant_from_single_jsonl.py  check_qdrant_count.py
(+21 files in other folders)
