[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forestryllm"
version = "0.1.0"
description = "Trusted forestry RAG research tooling"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "qdrant-client>=1.9",
  "requests>=2.31",
  "sentence-transformers>=2.7",
  "PyMuPDF>=1.24",
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12",
  "lxml>=5.0"
]

[project.scripts]
forestryllm = "forestryllm.cli:main"

[tool.setuptools.packages.find]
include = ["forestryllm*"]
